<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#006600"
    android:stretchColumns="0" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="70dp"
        android:layout_y="10dp"
        android:text="@string/userInput"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30dp"
        android:layout_y="70dp"
        android:text="@string/userName" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_x="150dp"
        android:layout_y="70dp"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30dp"
        android:layout_y="120dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_x="150dp"
        android:layout_y="120dp"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30dp"
        android:layout_y="170dp"
        android:text="@string/age" />

    <EditText
        android:id="@+id/age"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_x="150dp"
        android:layout_y="170dp"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30dp"
        android:layout_y="220dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_x="150dp"
        android:layout_y="220dp"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/submit"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_x="60dp"
        android:layout_y="370dp"
        android:text="@string/submit" />

    <Button
        android:id="@+id/signUpHome"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_x="180dp"
        android:layout_y="370dp"
        android:text="@string/previousHome" />

</AbsoluteLayout>