<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="0" 
    android:background="#006600">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="70dp"
        android:layout_y="10dp"
        android:text="@string/changePassword"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30dp"
        android:layout_y="70dp"
        android:text="@string/oldPassword" />

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_x="150dp"
        android:layout_y="70dp"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30dp"
        android:layout_y="120dp"
        android:text="@string/newPassword" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_x="150dp"
        android:layout_y="120dp"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30dp"
        android:layout_y="170dp"
        android:text="@string/confirmPassword" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_x="150dp"
        android:layout_y="170dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/submit"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_x="120dp"
        android:layout_y="370dp"
        android:text="@string/submit" />

</AbsoluteLayout>