<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="0"
    android:background="#006600">

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/placeAnOrder"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_x="100dp"
        android:layout_y="130dp"
        android:text="@string/placeAnOrder" />

    <Button
        android:id="@+id/viewPreviousOrders"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_x="100dp"
        android:layout_y="200dp"
        android:text="@string/viewPreviousOrders" />

    <Button
        android:id="@+id/changePassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_x="100dp"
        android:layout_y="270dp"
        android:text="@string/changePassword" />
    
    <Button
        android:id="@+id/userHomeLogout"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_x="100dp"
        android:layout_y="470dp"
        android:text="@string/logout" />

    
    

</AbsoluteLayout>