<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#006600"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#006"
        android:orientation="vertical" >

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#006"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previousOrderHeaderName" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previousOrderHeaderPrice" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previousOrderHeaderQuantity" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previousOrderHeaderRowPrice" />
        </LinearLayout>

    <ListView
        android:id="@+id/previousOrderListview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</LinearLayout>