<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#006600"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeMessage"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/signIn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="signIn"
            android:text="@string/signIn" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="signUp"
            android:text="@string/signUp" />
    </LinearLayout>

</LinearLayout>