<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/addAdminUserName" />

        <EditText
            android:id="@+id/addAdminUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="20dp"
            android:layout_weight=".50"
            android:inputType="text"
            android:paddingTop="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/addAdminName" />

        <EditText
            android:id="@+id/addAdminName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
            android:layout_marginRight="20dp"
            android:layout_weight=".50"
            android:inputType="text"
            android:paddingTop="20dp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/addAdminAge" />

        <EditText
            android:id="@+id/addAdminAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.50"
            android:inputType="number"
            android:paddingTop="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/addAdminPassword" />

        <EditText
            android:id="@+id/addAdminPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.50"
            android:inputType="textPassword"
            android:paddingTop="20dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/addAdminSubmit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

        <Button
            android:id="@+id/addAdminHome"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/addAdminHome" />
    </LinearLayout>

</LinearLayout>